[package]
name = "r2d2_cypher"
version = "0.4.0"
license = "MIT"
authors = ["Markus Kohlhase <mail@markus-kohlhase.de>"]
repository = "https://github.com/flosse/r2d2-cypher"
description = "Cypher support for the r2d2 connection pool"
readme = "README.md"

keywords = ["cypher", "neo4j", "r2d2"]

[dependencies]
r2d2 = "0.8"
rusted_cypher = "1.1"
